# green-fashion-app

./: .dockerignore  .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_streamlit.sh
.github/actions/build-docker/: action.yml
.github/actions/terraform-apply/: action.yml
.github/workflows/: README.md  build-and-push.yml  ci.yml  deploy-dev.yml  deploy-full.yml  deploy-infrastructure.yml  deploy-prod.yml
api/: .dockerignore  Dockerfile  README.md  main.py
classifier_api/: .dockerignore  Dockerfile
config/docker/: docker-compose.yml
deploy/: README.md
deploy/mongo-init/: init-db.js
deploy/scripts/: setup-gcp.sh
green_fashion/: __init__.py
green_fashion/database/: __init__.py  config.py  mongodb_manager.py  wardrobe_manager.py
green_fashion/storage/: __init__.py  config.py  gcs_service.py  usage_example.py
infrastructure/environments/dev/: main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
infrastructure/environments/prod/: main.tf  outputs.tf  terraform.tfvars  variables.tf
infrastructure/modules/auth/: main.tf  outputs.tf
infrastructure/modules/cloud_run/: main.tf  outputs.tf  variables.tf
infrastructure/modules/composer/: main.tf  outputs.tf  variables.tf
infrastructure/modules/gcs/: main.tf  outputs.tf  variables.tf
infrastructure/modules/iam/: main.tf  outputs.tf  variables.tf
infrastructure/modules/mongodb/: main.tf  outputs.tf  variables.tf
infrastructure/modules/mysql/: main.tf  outputs.tf  variables.tf
infrastructure/modules/networking/: main.tf
notebooks/: color_extracter.ipynb  create_dataset.ipynb  matcher.ipynb  parse_dataset.ipynb
scripts/: local-deploy.sh
services/api/: .env.sample  Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 2025_09_07_2122_create_account_table.py  2f1010d1df52_create_account_table.py  7468af573b4c_add_a_column.py
services/api/src/: main.py
services/backup_service/: pyproject.toml
services/backup_service/src/: main.py
services/classifier_api/: .env.sample  Dockerfile  pyproject.toml
services/classifier_api/src/: main.py
src/clothing/: config.py  piece_mapper.py
src/color_extracting/: color_palette_extractor.py
streamlit-app/: app.py
streamlit_app/: app.py  clothing_classifier.py  color_palette_extractor.py  config.py  matcher.py  wardrobe_manager.py
terraform/: DEPLOYMENT.md  cloud_run.tf  main.tf  monitoring.tf  outputs.tf  secrets.tf  storage.tf  terraform.tfstate  terraform.tfvars  terraform.tfvars.example  variables.tf
terraform/environments/: dev.tfvars  prod.tfvars  staging.tfvars
webapp/: .env.example  README.md  package-lock.json  package.json
webapp/src/: App.tsx  main.tsx
webapp/src/components/: AddItemForm.tsx  EditCategoryModal.tsx  WardrobeView.tsx
webapp/src/components/ui/: UserDropdown.tsx  button-variants.ts  button.tsx  card.tsx  input.tsx  loginButton.tsx  select.tsx
webapp/src/contexts/: AuthContext.tsx  AuthProvider.tsx
webapp/src/hooks/: useAuth.ts  useSessionToken.ts
webapp/src/lib/: api.ts  classifier_api.ts  constants.ts
webapp/src/types/: auth.ts
