[project]
name = "monorepo-dev"
version = "0.1.0"
requires-python = ">=3.11"

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.5.0",
    "ruff>=0.5.6",
]

[tool.ruff]
extend-exclude = ["packages/*/build", "services/*/build"]
src = ["packages/common-python/src", "services/api/src", "services/ml-api/src"]
