[project]
name = "green-fashion-monorepo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.5.0",
    "ruff>=0.5.6",
]


[tool.ruff]
extend-exclude = ["packages/*/build", "services/*/build"]
src = ["packages/green_fashion", "services/api/src", "services/classifier_api/src"]
