[project]
name = "green-fashion-api"
version = "0.1.0"
description = "Green Fashion API service for wardrobe management"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",
    "green-fashion",
    "pyjwt>=2.10.1",
    "google-auth>=2.40.3",
    "python-dotenv>=1.1.1",
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.12.9",
]

[tool.uv.sources]
green-fashion = { path = "../../packages/green_fashion", editable = true }
